added company logos

--- a/index.html
+++ b/index.html
@@ -501,7 +501,9 @@
                             <div class="modal-body">
                                 <h2><font size = "6"> Dr. Jasmine Hau Yuan Wen</font></h2>
                                 <hr class="star-primary">
-                                <img src="assets/img/speakers/drjasminehau.jpg" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
+                                <img src="assets/img/speakers/drjasminehau.jpg" style  = "float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin"> 
+                                <img src="assets/img/speakers/utm.jpg" style  = "float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="UTM logo"> 
+                                <p style = "clear:both;">
                                 <h3><font size = "5"> Topic: Keynote </font></h3>
                                 <p>Dr. Jasmine Hau Yuan Wen is a research fellow and the head of Cardiac Informatics Cluster
 at IJN-UTM Cardiovascular Engineering Centre, Universiti Teknologi Malaysia. She
@@ -537,7 +539,10 @@ Universiti Teknologi Malaysia. She received both Ph.D. degree and master degree 
                             <div class="modal-body">
                                 <h2><font size ="7">Koh Wyhow</font></h2>
                                 <hr class="star-primary">
-                                <img src="assets/img/speakers/kohwyhow.jpg" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
+                                <img src="assets/img/speakers/kohwyhow.jpg" style  = "float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="Picture of Koh Wyhow"> 
+                                <img src="assets/img/speakers/invoke.jpg" style  = "float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="UTM logo"> 
+                                <p style = "clear:both;">
+                                <img src="assets/img/speakers/" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
                                 <h3><font size = "5"> Topic: Keynote </font></h3>
                                 <p>Koh Wyhow is a data analytics professional with an excess of 5 years of experience, who obtained his Bachelor of Science in Mathematics from NUS. His work involves providing advanced analytics and business intelligence solutions for airlines, media, property and FMCG industries using various data science techniques such as Decision Trees, Random Forest and many more. </p>
                                 
@@ -570,8 +575,9 @@ Universiti Teknologi Malaysia. She received both Ph.D. degree and master degree 
                             <div class="modal-body">
                                 <h2><font size ="7">Pedro Uria Recio</font></h2>
                                 <hr class="star-primary">
-                                <img src="assets/img/speakers/pedrouriarecio.jpg" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
-                                <h3><font size = "5"> Topic: Keynote </font></h3>
+                                <img src="assets/img/speakers/pedrouriarecio.jpg" style  = "float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="Picture of Pedro Uria Recio"> 
+                                <img src="assets/img/speakers/axiata.jpg" style  = "float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="Axiata"> 
+                                <p style = "clear:both;"><h3><font size = "5"> Topic: Keynote </font></h3>
                                 <p> 
 Pedro Uria Recio is a senior marketing leader, highly experienced in data analytics, AI, product marketing and P&L management. At Axiata, he is the Group’s head of analytics with focus on marketing and is responsible for below-the-line marketing. He has worked in many countries such as USA, China and France. He obtained his MBA From Chicago Booth and is currently pursuing a pro-degree in fintech by Barclays. He is enthusiastic about coaching and developing people and has built  many leading high-performing teams from scratch.
 </p>
@@ -606,7 +612,9 @@ Pedro Uria Recio is a senior marketing leader, highly experienced in data analyt
                             <div class="modal-body">
                                 <h2><font size ="7">Chen Fong Tuan</font></h2>
                                 <hr class="star-primary">
-                                <img src="assets/img/speakers/fongtuanchen.jpg" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
+                                <img src="assets/img/speakers/fongtuanchen.jpg" style  = "float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="Picture of Fong Tuan Chen"> 
+                                <img src="assets/img/speakers/samsung.png" style  = "float: left; width 30%; margin-right: 1%; margin=bottom: 0.5em;" class="img-responsive img-centered" alt="UTM logo"> 
+                                <p style = "clear:both;">
                                 <h3><font size = "5"> Topic: Keynote </font></h3>
                                 <p>Chen Fong Tuan is The HR director at Samsung Electronics. His expertise in innovating dynamic people programs and initiatives to optimise employee experience has enabled all of his organisations to achieve targeted business objectives. He has managed the entire spectrum of HR in a multitude of portfolios whilst working in multiple industries such as utility, financial services, medical tech and real estate.  He obtained his BEng from the University of Sussex and also obtained his MBA from the Charles Sturt University. </p>
                                 
