adjusted section sizes

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!--cover section slider end -->
 
     <!--event info -->
-    <section class="pt100 pb100">
+    <section class="pt20 pb40">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-6 col-md-3  ">
@@ -158,12 +158,12 @@
 
 
     <!--event countdown -->
-    <section class="bg-img pt70 pb70" style="background-image: url('assets/img/bg/bg2.jpg');">
+    <section class="bg-img pt20 pb20" style="background-image: url('assets/img/bg/bg2.jpg');">
         <div class="overlay_dark"></div>
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10">
-                    <h4 class="mb30 text-center color-light">Counter until the big event</h4>
+                    <h4 class="mb5 text-center color-light">COUNTDOWN UNTIL THE BIG EVENT</h4>
                     <div class="countdown"></div>
                 </div>
             </div>
@@ -174,7 +174,7 @@
 
 
     <!--about the event -->
-    <section class="pt100 pb100">
+    <section class="pt50 pb60">
         <div class="container">
 
             <div class="section_title">
@@ -203,7 +203,7 @@
 
 
     <!--speaker section-->
-    <section class="pb100">
+    <section class="pb60">
         <div class="container">
             <div class="section_title mb50">
                 <h3 class="title">
@@ -275,7 +275,7 @@
     <!--speaker section end -->
 
     <!--more info section-->
-    <section class="pb100">
+    <section class="pb60">
         <div class="container">
             <div class="section_title mb50">
                 <h3 class="title">
@@ -337,12 +337,12 @@
             </div>
         </div>
 
-    </section>
+    </section>x
     <p id="sponsors"></p>
     <!--price section end -->
 
     <!--sponsors section -->
-    <section class="bg-gray pt100 pb100">
+    <section class="bg-gray pt50 pb60">
         <div class="container">
 
             <div class="section_title mb50">
@@ -368,8 +368,8 @@
     </section>
     <!--brands section end-->
 
-    <!--get tickets section -->
-    <section class="bg-img pt100 pb100" style="background-image: url('assets/img/bg/tickets.png');">
+    <!--register section -->
+    <section class="bg-img pt50 pb50" style="background-image: url('assets/img/bg/tickets.png');">
         <div class="container">
             <div class="section_title mb30">
                 <h3 class="title color-light">
@@ -512,7 +512,7 @@ Universiti Teknologi Malaysia. She received both Ph.D. degree and master degree 
                                 
                                 
                                 <p> &#8226; Over 50 published papers </p>
-                                <p> &#8226; Owns a national patent and copyrights </p>
+                                <p> &#8226; Owns a nationa  l patent and copyrights </p>
                                 <p>&#8226; Member of IEEE</p>
                                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             </div>
