adjusted section sizes again

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 
     <!--about the event -->
-    <section class="pt50 pb60">
+    <section class="pt45 pb60">
         <div class="container">
 
             <div class="section_title">
@@ -192,17 +192,19 @@
                     <p>
                         Under the banner of Young Malaysian Engineers (YME) the conference will cover a wide range of topics within the scope of entrepreneurship, social, environment and corporate. Not only will the participants get to have better insights on the local challenges faced in Malaysia, they will also have the opportunity to network with people from the industry.
                 </div>
+                
             </div>
-
+ 
 
         </div>
-        <p id="speaker"></p>
+     <p id="speaker"></p>   
     </section>
 
     <!--about the event end -->
 
 
     <!--speaker section-->
+   
     <section class="pb60">
         <div class="container">
             <div class="section_title mb50">
@@ -275,9 +277,9 @@
     <!--speaker section end -->
 
     <!--more info section-->
-    <section class="pb60">
+    <section class="pb0">
         <div class="container">
-            <div class="section_title mb50">
+            <div class="section_title mb30">
                 <h3 class="title">
                     MORE INFO
                 </h3>
@@ -339,10 +341,10 @@
 
     </section>x
     <p id="sponsors"></p>
-    <!--price section end -->
+    <!--more info section end -->
 
     <!--sponsors section -->
-    <section class="bg-gray pt50 pb60">
+    <section class="bg-gray pt45 pb40">
         <div class="container">
 
             <div class="section_title mb50">
