--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@ title: MSTC2019 Paradigm
                                 speakers
                             </h5>
                             <p>
-                                Barack Obama
-                                + guests
+                                Dr Hau, Wyhow, Pedro, Fong Tuan + more
                             </p>
                         </div>
                     </div>
@@ -251,7 +250,7 @@ title: MSTC2019 Paradigm
                             <img src="assets/img/speakers/drjasminehau.jpg" alt="speaker name">
                             <div class="info_box">
                                 <h5 class="name">Dr. Jasmine Hau Yuan Wen</h5>
-                                <p class="position">Universiti Teknologi Malaysia - senior lecturer/research fellow</p>
+                                <p class="position">Universiti Teknologi Malaysia <br> -Senior lecturer/Research fellow</p>
                             </div>
                         </div>
                     </div>
@@ -264,7 +263,7 @@ title: MSTC2019 Paradigm
                             <img src="assets/img/speakers/kohwyhow.jpg" alt="speaker name">
                             <div class="info_box">
                                 <h5 class="name">Koh Wyhow</h5>
-                                <p class="position">Invoke - Chief Analytics Officer</p>
+                                <p class="position">Invoke <br> -Chief Analytics Officer <br> </p>
                             </div>
                         </div>
                     </div>
@@ -278,7 +277,7 @@ title: MSTC2019 Paradigm
                             <img src="assets/img/speakers/pedrouriarecio.jpg" alt="speaker name">
                             <div class="info_box">
                                 <h5 class="name">Pedro Uria Recio</h5>
-                                <p class="position">Axiata - Vice President & Head of Data Analytics</p>
+                                <p class="position">Axiata <br> -Vice President & Head of Data Analytics</p>
                             </div>
                         </div>
                     </div>
@@ -292,7 +291,7 @@ title: MSTC2019 Paradigm
                             <img src="assets/img/speakers/fongtuanchen.jpg" alt="speaker name">
                             <div class="info_box">
                                 <h5 class="name">Chen Fong Tuan</h5>
-                                <p class="position">Samsung - Human Resources & General Affairs Director</p>
+                                <p class="position">Samsung <br> -HR & General Affairs Director</p>
                             </div>
                         </div>
                     </div>
@@ -340,7 +339,7 @@ title: MSTC2019 Paradigm
                                 Agenda
                             </h4>
                             <h6>
-                                Download or print out our schedule
+                                Download or print out our schedule for MSTC 2019
                             </h6>
                         </div>
 
@@ -437,7 +436,7 @@ title: MSTC2019 Paradigm
                             <ul class="footer_social">
 
                                 <li>
-                                    <a href="#"><i class="ion-social-facebook"></i></a>
+                                    <a href="http://www.facebook.com/malaysianstudentstechnologyconference/"><i class="ion-social-facebook"></i></a>
                                 </li>
 
 
