--- a/index.html
+++ b/index.html
@@ -383,14 +383,20 @@ title: MSTC2019 Paradigm
             </div>
             <div class="brand_carousel owl-carousel">
                 <div class="brand_item text-center">
+                    <a href="http://www.pwc.co.uk/">
                     <img src="assets/img/brands/pwc.png" alt="brand">
+                     </a>
                 </div>
                 <div class="brand_item text-center">
+                    <a href = "http://home.kpmg">
                     <img src="assets/img/brands/kpmg.png" alt="brand">
+                     </a>
                 </div>
 
                 <div class="brand_item text-center">
+                    <a href = "https://www.mytukar.com">
                     <img src="assets/img/brands/mytukar.png" alt="brand">
+                    </a>
                 </div>
 
             </div>
