added HOD video

--- a/ourTeam.html
+++ b/ourTeam.html
@@ -24,8 +24,11 @@
     <link href="assets/css/owl.theme.default.min.css" rel="stylesheet">
     <!-- Animate CSS -->
     <link rel="stylesheet" href="assets/css/animate.min.css">
+
+
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -92,6 +95,90 @@
         <div class="container">
             <div class="section_title">
                 <h3 class="title">
+                    Meet Our HOD
+                </h3>
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-6">
+                    <p>
+                        You may have some ideas about who the HODs are in person, but do you know what they are HODs are doing for MSTC??? Check this video to find out.
+                    </p>
+                </div>
+
+            </div>
+
+            <img src="assets/img/mstc-fluid.png" class="img-fluid" style="width:50%; height: 50%">
+            <img src="assets/img/play_button.png" class="play-btn" style="width:10%; height: 10%" data-toggle="modal" data-target="#exampleModalCenter">
+        </div>
+    </section>
+    <!--about section end -->
+
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">This Video DOES NOT Include All MSTC HODs and Accurate Job Scopes!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="row" id="modal-row">
+                        <div class="col-sm" style="text-align: center">
+                            <img class="btn-circle" src="assets/img/team/suhasan_head.png" id="suhasan">
+
+                            <p>Suhasan Kana<br>Executive Officer</p>
+
+                            <img class="btn-circle" src="assets/img/team/zq_head.png" id="zhangquan">
+
+                            <p>Zhang Quan<br>Operation &#38; Logistics</p>
+
+                            <img class="btn-circle" src="assets/img/team/derrick_head.png" id="derrick">
+
+                            <p>Derrick Goh<br>Media &#38; Marketing</p>
+
+                            <img class="btn-circle" src="assets/img/team/ivan_head.png" id="ivan">
+
+                            <p>Ivan Chong<br>Finance &#38; Sponsorship</p>
+
+                        </div>
+                        <div class="col-8">
+                            <video width="100%" id="mstc_video" style="margin-top: 5%" controls>
+                                <source src="assets/img/mstc-teaser.mov" type="video/mp4">
+                            </video>
+                        </div>
+                        <div class="col-sm" style="text-align: center">
+                            <img class="btn-circle" src="assets/img/team/kenrick_head.png" id="kenrick">
+
+                            <p>Kenrick Tan<br>Deputy Executive</p>
+
+                            <img class="btn-circle" src="assets/img/team/farhana_head.png" id="farhana">
+
+                            <p>Farhana Rosol<br>Human Resources</p>
+                            <img class="btn-circle" src="assets/img/team/sherree_head.png" id="sherree">
+                            <p>Sher Ree<br>Media &#38; Marketing</p>
+
+
+                            <img class="btn-circle" src="assets/img/team/wh_head.png" id="weihao">
+                            <p>Wei Hao<br>Finance &#38; Sponsorship</p>
+
+
+
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!--about section -->
+    <section class="pt100 pb100">
+        <div class="container">
+            <div class="section_title">
+                <h3 class="title">
                     About Our Team
                 </h3>
             </div>
@@ -108,6 +195,7 @@
         </div>
     </section>
     <!--about section end -->
+
 
     <!--speaker section-->
     <section class="pb100">
@@ -467,6 +555,8 @@
     </div>
     <!--footer end -->
 
+
+
     <!-- jquery -->
     <script src="assets/js/jquery.min.js"></script>
     <!-- bootstrap -->
@@ -485,6 +575,7 @@
     <script src="assets/js/wow.min.js"></script>
     <!-- Custom js -->
     <script src="assets/js/main.js"></script>
+    <script src="ourTeam.js"></script>
 </body>
 
 </html>
