--- a/ourTeam.html
+++ b/ourTeam.html
@@ -104,6 +104,7 @@
                     <p>
                         You may have some ideas about who the HODs are in person, but do you know what they are HODs are doing for MSTC??? Check this video to find out.
                     </p>
+                    <p></p>
                 </div>
 
             </div>
@@ -175,7 +176,7 @@
     </div>
 
     <!--about section -->
-    <section class="pt100 pb100">
+    <section class="pt100 pb100" style="margin-top: -10%">
         <div class="container">
             <div class="section_title">
                 <h3 class="title">
@@ -196,8 +197,96 @@
     </section>
     <!--about section end -->
 
+    <!--    department section-->
+    <section class="pb100" style="padding-left: 20%; padding-right: 20%;">
+        <div class="row justify-content-md-center">
+            <div class="col" width="80%">
+                <div class="speaker_box">
+                    <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
+                        <img src="assets/img/team/advisor_icon.png" alt="speaker name">
+                        <span class="glyphicon glyphicon-check fa-2x"></span>
+                        <div class="info_box">
+                            <h5 class="name">Advisors</h5>
+                            <p class="position">4 Advisors</p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="col" width="80%">
+                <div class="speaker_box">
+                    <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
+                        <img src="assets/img/team/executive_icon.png" alt="speaker name">
+                        <div class="info_box">
+                            <h5 class="name">Executive</h5>
+                            <p class="position">1 Executive + 2 Deputy Executive</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col" width="80%">
+                <div class="speaker_box">
+                    <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
+                        <img src="assets/img/team/logistic_icon.png" alt="speaker name">
+                        <div class="info_box">
+                            <h5 class="name">Operation and Logistics</h5>
+                            <p class="position">2 HOD + 5 Officers</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="row justify-content-md-center" style="margin-top: 2%">
+            <div class="col" width="80%">
+                <div class="speaker_box">
+                    <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
+                        <img src="assets/img/team/finance_icon.png" alt="speaker name">
+                        <div class="info_box">
+                            <h5 class="name">Finance and Sponsorship</h5>
+                            <p class="position">2 HOD + 5 Officers</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col">
+                <div class="speaker_box" width="80%">
+                    <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
+                        <img src="assets/img/team/media_icon.png" alt="speaker name">
+                        <div class="info_box">
+                            <h5 class="name">Media and Marketing</h5>
+                            <p class="position">2 HOD + 6 Officers</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col">
+                <div class="speaker_box" width="80%">
+                    <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
+                        <img src="assets/img/team/hr_icon.png" alt="speaker name">
+                        <div class="info_box">
+                            <h5 class="name">Human Resources</h5>
+                            <p class="position">1 HOD</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </section>
+    <!--    department section ends-->
 
     <!--speaker section-->
+    <!--
     <section class="pb100">
         <div class="row justify-content-center no-gutters">
             <div class="col-md-3 col-sm-6">
@@ -419,6 +508,7 @@
             </div>
         </div>
     </section>
+-->
     <!--speaker section end -->
 
 
@@ -539,6 +629,7 @@
     <div class="copyright_footer">
         <div class="container">
             <div class="row justify-content-center">
+                Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik </a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
                 <div class="col-md-6 col-12">
                     <p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
