fix mobile responsive

--- a/ourTeam.html
+++ b/ourTeam.html
@@ -109,7 +109,7 @@
 
             </div>
 
-            <img src="assets/img/mstc-fluid.png" class="img-fluid" style="width:50%; height: 50%">
+            <img src="assets/img/mstc-fluid.png" class="img-fluid">
             <img src="assets/img/play_button.png" class="play-btn" style="width:10%; height: 10%" data-toggle="modal" data-target="#exampleModalCenter">
         </div>
     </section>
@@ -127,42 +127,64 @@
                 <div class="modal-body">
                     <div class="row" id="modal-row">
                         <div class="col-sm" style="text-align: center">
-                            <img class="btn-circle" src="assets/img/team/suhasan_head.png" id="suhasan">
 
-                            <p>Suhasan Kana<br>Executive Officer</p>
+                            <div class="in-row">
+                                <img class="btn-circle" src="assets/img/team/suhasan_head.png" id="suhasan">
 
-                            <img class="btn-circle" src="assets/img/team/zq_head.png" id="zhangquan">
+                                <p>Suhasan Kana<br>Executive Officer</p>
+                            </div>
 
-                            <p>Zhang Quan<br>Operation &#38; Logistics</p>
 
-                            <img class="btn-circle" src="assets/img/team/derrick_head.png" id="derrick">
+                            <div class="in-row">
+                                <img class="btn-circle" src="assets/img/team/zq_head.png" id="zhangquan">
 
-                            <p>Derrick Goh<br>Media &#38; Marketing</p>
+                                <p>Zhang Quan<br>Operation &#38; Logistics</p>
 
-                            <img class="btn-circle" src="assets/img/team/ivan_head.png" id="ivan">
+                            </div>
 
-                            <p>Ivan Chong<br>Finance &#38; Sponsorship</p>
+                            <div class="in-row">
+
+                                <img class="btn-circle" src="assets/img/team/derrick_head.png" id="derrick">
+
+                                <p>Derrick Goh<br>Media &#38; Marketing</p>
+
+                            </div>
+
+                            <div class="in-row">
+                                <img class="btn-circle" src="assets/img/team/ivan_head.png" id="ivan">
+
+                                <p>Ivan Chong<br>Finance &#38; Sponsorship</p>
+                            </div>
+
+
 
                         </div>
-                        <div class="col-8">
-                            <video width="100%" id="mstc_video" style="margin-top: 5%" controls>
+                        <div class="col-8" style="text-align: center">
+                            <video width="100%" id="mstc_video" style="margin-top: 2%" controls>
                                 <source src="assets/img/mstc-teaser.mov" type="video/mp4">
                             </video>
                         </div>
                         <div class="col-sm" style="text-align: center">
-                            <img class="btn-circle" src="assets/img/team/kenrick_head.png" id="kenrick">
-
-                            <p>Kenrick Tan<br>Deputy Executive</p>
-
-                            <img class="btn-circle" src="assets/img/team/farhana_head.png" id="farhana">
-
-                            <p>Farhana Rosol<br>Human Resources</p>
-                            <img class="btn-circle" src="assets/img/team/sherree_head.png" id="sherree">
-                            <p>Sher Ree<br>Media &#38; Marketing</p>
+                            <div class="in-row">
+                                <img class="btn-circle" src="assets/img/team/kenrick_head.png" id="kenrick">
+                                <p>Kenrick Tan<br>Deputy Executive</p>
+                            </div>
 
 
-                            <img class="btn-circle" src="assets/img/team/wh_head.png" id="weihao">
-                            <p>Wei Hao<br>Finance &#38; Sponsorship</p>
+                            <div class="in-row">
+                                <img class="btn-circle" src="assets/img/team/farhana_head.png" id="farhana">
+                                <p>Farhana Rosol<br>Human Resources</p>
+                            </div>
+
+                            <div class="in-row">
+                                <img class="btn-circle" src="assets/img/team/sherree_head.png" id="sherree">
+                                <p>Sher Ree<br>Media &#38; Marketing</p>
+                            </div>
+
+                            <div class="in-row">
+                                <img class="btn-circle" src="assets/img/team/wh_head.png" id="weihao">
+                                <p>Wei Hao<br>Finance &#38; Sponsorship</p>
+                            </div>
 
 
 
