--- a/ourTeam.html
+++ b/ourTeam.html
@@ -220,9 +220,9 @@
     <!--about section end -->
 
     <!--    department section-->
-    <section class="pb100" style="padding-left: 20%; padding-right: 20%;">
+    <section class="pb100" id="section_team">
         <div class="row justify-content-md-center">
-            <div class="col" width="80%">
+            <div class="col">
                 <div class="speaker_box">
                     <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
                         <img src="assets/img/team/advisor_icon.png" alt="speaker name">
@@ -236,7 +236,7 @@
                 </div>
 
             </div>
-            <div class="col" width="80%">
+            <div class="col">
                 <div class="speaker_box">
                     <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
                         <img src="assets/img/team/executive_icon.png" alt="speaker name">
@@ -248,7 +248,7 @@
 
                 </div>
             </div>
-            <div class="col" width="80%">
+            <div class="col">
                 <div class="speaker_box">
                     <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
                         <img src="assets/img/team/logistic_icon.png" alt="speaker name">
@@ -263,7 +263,7 @@
         </div>
 
         <div class="row justify-content-md-center" style="margin-top: 2%">
-            <div class="col" width="80%">
+            <div class="col">
                 <div class="speaker_box">
                     <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
                         <img src="assets/img/team/finance_icon.png" alt="speaker name">
@@ -276,7 +276,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="speaker_box" width="80%">
+                <div class="speaker_box">
                     <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
                         <img src="assets/img/team/media_icon.png" alt="speaker name">
                         <div class="info_box">
@@ -288,7 +288,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="speaker_box" width="80%">
+                <div class="speaker_box">
                     <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
                         <img src="assets/img/team/hr_icon.png" alt="speaker name">
                         <div class="info_box">
