--- a/ourTeam.html
+++ b/ourTeam.html
@@ -223,7 +223,7 @@
     <section class="pb100" id="section_team">
         <div class="row justify-content-md-center">
             <div class="col">
-                <div class="speaker_box">
+                <div class="speaker_box" data-toggle="modal" data-target="#selectionModal">
                     <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
                         <img src="assets/img/team/advisor_icon.png" alt="speaker name">
                         <span class="glyphicon glyphicon-check fa-2x"></span>
@@ -306,6 +306,27 @@
 
     </section>
     <!--    department section ends-->
+
+
+    <div class="modal fade" id="selectionModal" tabindex="-1" role="dialog" aria-labelledby="selectionModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Job Title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <!--speaker section-->
     <!--
