--- a/ourTeam2.html
+++ b/ourTeam2.html
@@ -246,8 +246,8 @@
 
                 </div>
             </div>
-            <div class="col" data-toggle="modal" data-target="#logisticsModal">
-                <div class="speaker_box">
+            <div class="col">
+                <div class="speaker_box" data-toggle="modal" data-target="#logisticsModal">
                     <div class="speaker_img" style="background-image: linear-gradient(aqua,teal);border-radius: 5%">
                         <img src="assets/img/team/logistic_icon.png" alt="speaker name">
                         <div class="info_box">
@@ -307,71 +307,61 @@
 
 
     <div class="modal fade" id="advisorModal" tabindex="-1" role="dialog" aria-labelledby="selectionModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="section_title">
-                        <h3 class="title">
-                            Advisors
-                        </h3>
-                    </div>
+        <div class="animated fadeIn">
+            <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+                <div class="modal-content" style="margin-top: -2%">
+                    <div class="modal-body" style="display: table">
+                        <div class="section_title">
 
-                    <div class="row justify-content-center">
-                        <div class="col-12 col-md-6">
-                            <p class="">
-                                Describe what is about this department.
-                            </p>
-                            <p></p>
+                            <h3 class="title" id="memberName">
+                                Name
+                            </h3>
+                            <div class="row" style="margin-top: -2%">
+
+                                <div class="col">
+                                    <div style="text-align: center; vertical-align: middle">
+                                        <h4>Department</h4>
+                                        <h4 style="color:gray">Executive</h4>
+                                    </div>
+                                </div>
+                                <div class="col" style="text-align: center; vertical-align: middle;">
+                                    <div style="text-align: center; vertical-align: middle">
+                                        <h4>Title</h4>
+                                        <h4 style="color:gray">Executive Coordinator</h4>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
 
-                    </div>
+                        <div class="row">
+                            <div class="col">
+                                <img src="assets/img/team/suhasan_mstc.png">
+                            </div>
+                            <div class="col" style="text-align: center" id="member_column">
+                                <span>
+                                    Imperial College London<br><br><br>
+                                    Physics<br><br><br>
+                                    A theoretical physics student from Imperial College London. Acting as the Executive Coordinator of MSTC 2019: Paradigm. Aiming to make a shift in participants' paradigm on Science and Technology!
+                                </span>
 
-                    <div class="row member-row">
-                        <div class="col-sm" style="text-align: center">
-                            <div class="in-row-member member-col">
-                                <img class="btn-circle-member" src="assets/img/team/unknown.jpg" id="zc">
-                                <p>Zhi Chao</p>
+                                <div class="row" style="margin-top: 15%">
+                                    <div class="col">
+                                        <img src="assets/img/logo.png" style="z-index: -1" alt="Evento" />
+                                    </div>
+                                    <div class="col">
+                                        <span style="font-size: 1.5rem; color:darkcyan" class="stamp is-approved">Approved</span>
+                                    </div>
+
+                                </div>
                             </div>
 
-                        </div>
-
-                        <div class="col-sm" style="text-align: center">
-                            <div class="in-row-member member-col">
-                                <img class="btn-circle-member" src="assets/img/team/unknown.jpg" id="azrai">
-                                <p>Azrai</p>
-                            </div>
 
                         </div>
-
-
-                    </div>
-
-                    <div class="row member-row">
-                        <div class="col-sm member-col" style="text-align: center">
-                            <div class="in-row-member member-col">
-                                <img class="btn-circle-member" src="assets/img/team/jaselyn_head.png" id="jaselyn">
-                                <p>Jaselyn</p>
-                            </div>
-
-                        </div>
-
-                        <div class="col-sm member-col" style="text-align: center">
-                            <div class="in-row-member member-col">
-                                <img class="btn-circle-member" src="assets/img/team/cs_head.png" id="cs">
-                                <p>Cha Sheng</p>
-                            </div>
-
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         </div>
                     </div>
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
@@ -440,7 +430,6 @@
             </div>
         </div>
 
-
         <div class="modal fade" id="logisticsModal" tabindex="-1" role="dialog" aria-labelledby="selectionModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                 <div class="modal-content">
@@ -460,34 +449,6 @@
                             </div>
 
                         </div>
-                        <div class="section_title">
-                            <h3 class="title">
-                                Head of Department
-                            </h3>
-                        </div>
-
-                        <div class="col-sm" style="text-align: center">
-                            <div class="in-row-member">
-                                <img class="btn-circle-member" src="assets/img/team/suhasan_head.png" id="kenrick">
-                                <p>Iyliana</p>
-                            </div>
-
-
-
-
-                        </div>
-                        <div class="col-sm" style="text-align: center">
-                            <div class="in-row-member">
-                                <img class="btn-circle-member" src="assets/img/team/zq_head.png" id="kenrick">
-                                <p>Zhang Quan</p>
-                            </div>
-
-
-
-
-                        </div>
-
-
 
                     </div>
                     <div class="modal-footer">
