--- a/ourTeam2.html
+++ b/ourTeam2.html
@@ -306,7 +306,7 @@
     <!--    department section ends-->
 
 
-    <div class="modal fade" id="advisorModal" tabindex="-1" role="dialog" aria-labelledby="selectionModalLabel" aria-hidden="true">
+    <div class="modal fade modal-dept" id="advisorModal" tabindex="-1" role="dialog" aria-labelledby="selectionModalLabel" aria-hidden="true">
         <div class="animated fadeIn">
             <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                 <div class="modal-content" style="margin-top: -2%">
