--- a/ourTeam.html
+++ b/ourTeam.html
@@ -306,7 +306,7 @@
     <!--    department section ends-->
 
 
-    <div class="modal fade" id="advisorModal" tabindex="-1" role="dialog" aria-labelledby="selectionModalLabel" aria-hidden="true">
+    <div class="modal fade modal-dept" id="advisorModal" tabindex="-1" role="dialog" aria-labelledby="selectionModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -322,16 +322,16 @@
                     </div>
 
                     <div class="row justify-content-center">
-                        <div class="col-12 col-md-6">
-                            <p class="">
-                                Describe what is about this department.
+                        <div class="col-12 col-md-10" style="text-align: center">
+                            <p class="description">
+                                Advisors provide useful feedback for each HODs departments when they propose a solution or idea for an event. Advisors also help analyse the risk and cost, provide various kinds of supports for each departments to help them achieving their goals.
                             </p>
                             <p></p>
                         </div>
 
                     </div>
 
-                    <div class="row member-row">
+                    <div class="row">
                         <div class="col-sm" style="text-align: center">
                             <div class="in-row-member member-col">
                                 <img class="btn-circle-member" src="assets/img/team/unknown.jpg" id="zc">
@@ -351,7 +351,7 @@
 
                     </div>
 
-                    <div class="row member-row">
+                    <div class="row">
                         <div class="col-sm member-col" style="text-align: center">
                             <div class="in-row-member member-col">
                                 <img class="btn-circle-member" src="assets/img/team/jaselyn_head.png" id="jaselyn">
@@ -370,14 +370,11 @@
                     </div>
 
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
             </div>
         </div>
     </div>
 
-    <div class="modal fade" id="executiveModal" tabindex="-1" role="dialog" aria-labelledby="selectionModalLabel" aria-hidden="true">
+    <div class="modal fade modal-dept" id="executiveModal" tabindex="-1" role="dialog" aria-labelledby="selectionModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -385,57 +382,61 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    <div class="section_title">
-                        <h3 class="title">
-                            Executive
-                        </h3>
-                    </div>
+                <div class="container">
+                    <div class="modal-body">
+                        <div class="section_title">
+                            <h3 class="title">
+                                Executive
+                            </h3>
+                        </div>
 
-                    <div class="row justify-content-center">
-                        <div class="col-12 col-md-6">
-                            <p class="">
-                                Describe what is about this department.
-                            </p>
-                            <p></p>
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-md-10" style="text-align: center">
+                                <p class="description">
+                                    The Executive Coordinator leads the organizing team, provides guidance to the departments and acts as spokesperson for MSTC. The Deputy Executive Coordinators assist the executive coordinator and work collaboratively with HODs and chair departments' meetings and liaison between Officer and HODs.
+                                </p>
+                                <p></p>
+                            </div>
+
+                        </div>
+
+                        <div class="section_title">
+                            <h3 class="title">
+                                Executive Coordinator
+                            </h3>
+                        </div>
+
+                        <div class="row member-row">
+                            <div class="col-sm" style="text-align: center">
+                                <div class="in-row-member member-col">
+                                    <img class="btn-circle-member" src="assets/img/team/suhasan_head.png" id="suhasan" style="width: 40%; height:auto">
+                                    <p>Suhasan Kanagasabapathy</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="section_title">
+                            <h3 class="title">
+                                Deputy Executive Coordinator
+                            </h3>
+                        </div>
+
+                        <div class="row member-row">
+                            <div class="col-sm" style="text-align: center">
+                                <div class="in-row-member member-col">
+                                    <img class="btn-circle-member" src="assets/img/team/kenrick_head.png" id="kenrick" style="width: 40%; height:auto">
+                                    <p>Kenrick Tan</p>
+                                </div>
+
+                            </div>
+
                         </div>
 
                     </div>
 
-                    <div class="section_title">
-                        <h3 class="title">
-                            Executive Coordinator
-                        </h3>
-                    </div>
-
-                    <div class="col-sm" style="text-align: center">
-                        <div class="in-row-member">
-                            <img class="btn-circle-member" src="assets/img/team/suhasan_head.png" id="kenrick">
-                            <p>Suhasan Kanagasabapathy</p>
-                        </div>
-
-
-
-
-                    </div>
-
-                    <div class="section_title">
-                        <h3 class="title">
-                            Deputy Executive Coordinator
-                        </h3>
-                    </div>
-
-                    <div class="col-sm" style="text-align: center">
-                        <div class="in-row-member">
-                            <img class="btn-circle-member" src="assets/img/team/kenrick_head.png" id="kenrick">
-                            <p>Kenrick Tan</p>
-                        </div>
-
-                    </div>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
+
+
 
             </div>
         </div>
@@ -929,7 +930,7 @@
 </div>
 </footer>
 -->
-            <div class="copyright_footer">
+            <div class="copyright_footer" style="z-index: -10">
                 <div class="container">
                     <div class="row justify-content-center">
                         Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik </a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
