--- a/ourTeam.html
+++ b/ourTeam.html
@@ -422,7 +422,8 @@
                         </h3>
                     </div>
 
-                    <div class="row member-row">
+
+                    <div class="row">
                         <div class="col-sm" style="text-align: center">
                             <div class="in-row-member member-col">
                                 <img class="btn-circle-member" src="assets/img/team/kenrick_head.png" id="kenrick" data-toggle="modal" data-target="#memberModal" onClick="setModal(5)">
@@ -431,9 +432,6 @@
 
                         </div>
 
-                    </div>
-
-                    <div class="row member-row">
                         <div class="col-sm" style="text-align: center">
                             <div class="in-row-member member-col">
                                 <img class="btn-circle-member" src="assets/img/team/unknown.jpg" id="imran" data-toggle="modal" data-target="#memberModal" onClick="setModal(6)">
@@ -442,7 +440,9 @@
 
                         </div>
 
+
                     </div>
+
 
                 </div>
 
