--- a/hangman.html
+++ b/hangman.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MSTC Hangman</title>
     <link rel="stylesheet" type="text/css" href="hangmancss.css" />
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter|Gloria+Hallelujah' rel='stylesheet' type='text/css'>
+    <link href= "https://fonts.googleapis.com/css?family=Alegreya+Sans+SC&display=swap" rel="stylesheet" type='text/css'>
     <script type="text/javascript" src="hangmanjs.js"></script>
     <script>window.onload = draw;</script>
 </head>
@@ -54,6 +54,7 @@
         </div>
     </div>
     <div id="gamePage">
+        
         <p id="categoryName"></p>
         <div id="wordWrap">
             <div id="underline1">
@@ -357,7 +358,7 @@
                 <div id="letter100"></div>
             </div>
         </div>
-        <canvas id="hangman" width="300px" height="300px"></canvas>
+        <canvas id="hangman" width="300px" height="300px" ></canvas>
         <div id="results"></div>
         <div id="letterBank">
                 <div id="a" value="A" onclick="guessLetter()">A</div><div id="b" value="B" onclick="guessLetter()">B</div><div id="c" value="C" onclick="guessLetter()">C</div><div id="d" value="D" onclick="guessLetter()">D</div><div id="e" value="E" onclick="guessLetter()">E</div><div id="f" value="F" onclick="guessLetter()">F</div><div id="g" value="G" onclick="guessLetter()">G</div><div id="h" value="H" onclick="guessLetter()">H</div><div id="i" value="I" onclick="guessLetter()">I</div><div id="j" value="J" onclick="guessLetter()">J</div><div id="k" value="K" onclick="guessLetter()">K</div><div id="l" value="L" onclick="guessLetter()">L</div><div id="m" value="M" onclick="guessLetter()">M</div><div id="n" value="N" onclick="guessLetter()">N</div><div id="o" value="O" onclick="guessLetter()">O</div><div id="p" value="P" onclick="guessLetter()">P</div><div id="q" value="Q" onclick="guessLetter()">Q</div><div id="r" value="R" onclick="guessLetter()">R</div><div id="s" value="S" onclick="guessLetter()">S</div><div id="t" value="T" onclick="guessLetter()">T</div><div id="u" value="U" onclick="guessLetter()">U</div><div id="v" value="V" onclick="guessLetter()">V</div><div id="w" value="W" onclick="guessLetter()">W</div><div id="x" value="X" onclick="guessLetter()">X</div><div id="y" value="Y" onclick="guessLetter()">Y</div><div id="z" value="Z" onclick="guessLetter()">Z</div>
