update our team

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ title: MSTC2019 Paradigm
         <div class="loader-inner"></div>
     </div>
 
-    <div class="button-container">
+    <div class="button-container" id="splash_c">
         <div class="close-modal" id="close_splash" onclick="closeSplash()">
             <div class="lr">
                 <div class="rl">
