--- a/ourTeam.html
+++ b/ourTeam.html
@@ -635,7 +635,7 @@
                     <div class="row member-row" style="margin-top: -2%; position: relative; padding-bottom: 10px">
                         <div class="col-sm" style="text-align: center">
                             <div class="in-row-member member-col" style="width: 50%; height:auto">
-                                <img class="btn-circle-member" src="assets/img/team/unknown.jpg" id="rabiatul" data-toggle="modal" data-target="#memberModal" onClick="setModal(18)">
+                                <img class="btn-circle-member" src="assets/img/team/rabiatul_head.jpg" id="rabiatul" data-toggle="modal" data-target="#memberModal" onClick="setModal(18)">
                                 <p>Rabiatul Adawiyah</p>
                             </div>
                         </div>
@@ -720,7 +720,7 @@
 
                         <div class="col-sm" style="text-align: center">
                             <div class="in-row-member member-col" style="width: 50%; height:auto">
-                                <img class="btn-circle-member" src="assets/img/team/unknown.jpg" id="yunhong" data-toggle="modal" data-target="#memberModal" onClick="setModal(23)">
+                                <img class="btn-circle-member" src="assets/img/team/yunhong_head.jpg" id="yunhong" data-toggle="modal" data-target="#memberModal" onClick="setModal(23)">
                                 <p>Yun Hong Yong</p>
                             </div>
                         </div>
@@ -742,7 +742,7 @@
                     <div class="row member-row" style="margin-top: 0%; position: relative; padding-bottom: 10px">
                         <div class="col-sm" style="text-align: center">
                             <div class="in-row-member member-col" style="width: 50%; height:auto">
-                                <img class="btn-circle-member" src="assets/img/team/unknown.jpg" id="jared" data-toggle="modal" data-target="#memberModal" onClick="setModal(26)">
+                                <img class="btn-circle-member" src="assets/img/team/jared_head.png" id="jared" data-toggle="modal" data-target="#memberModal" onClick="setModal(26)">
                                 <p>Jared Wong</p>
                             </div>
                         </div>
