--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@ title: MSTC2019 Paradigm
                                     </h2>
                                     <strong class="cover-xl-text">PARADIGM</strong>
                                     <p class="cover-date">
-                                        17 August 2019 - Mercu UEM, KL.
+                                        17 August 2019 - Top Glove Tower, Shah Alam
                                     </p>
-                                    <a href="#" class=" btn btn-primary btn-rounded">
+                                    <a href="https://tinyurl.com/2019mstc?fbclid=IwAR0IIruiVDZahEGA5M2S5BVevHWPcv5J5s2-f0MVurkwKMmvHvsHeSeMHIw" class=" btn btn-primary btn-rounded">
                                         Register Now
                                     </a>
                                 </div>
@@ -169,7 +169,7 @@ title: MSTC2019 Paradigm
                                     location
                                 </h5>
                                 <p>
-                                    Mercu UEM, KL.
+                                   Top Glove Tower, Shah Alam.
                                 </p>
                             </div>
                         </div>
@@ -183,7 +183,7 @@ title: MSTC2019 Paradigm
                                     speakers
                                 </h5>
                                 <p>
-                                    Dr Hau, Wyhow, Pedro, Fong Tuan + more
+                                    Dr Hau, Wyhow + more
                                 </p>
                             </div>
                         </div>
@@ -453,7 +453,7 @@ title: MSTC2019 Paradigm
                         What are you waiting for?! Sign up now to get the experience of your life!
                     </div>
                     <div class="col-md-3 text-md-right text-center">
-                        <a href="#" class="btn btn-primary btn-rounded mt30">Register Now</a>
+                        <a href="https://tinyurl.com/2019mstc?fbclid=IwAR0IIruiVDZahEGA5M2S5BVevHWPcv5J5s2-f0MVurkwKMmvHvsHeSeMHIw" class="btn btn-primary btn-rounded mt30">Register Now</a>
                     </div>
                 </div>
             </div>
