--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ title: MSTC2019 Paradigm
         <!--header start here -->
         <header class="header navbar fixed-top navbar-expand-md">
             <div class="container">
-                <a class="navbar-brand logo" href="#">
+                <a class="navbar-brand logo" href="https://mstc19.github.io/">
                     <img src="assets/img/logo.png" alt="Evento" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#headernav" aria-expanded="false" aria-label="Toggle navigation">
