--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ title: MSTC2019 Paradigm
                                 <img src="assets/img/speakers/kohwyhow.jpg" alt="speaker name">
                                 <div class="info_box">
                                     <h5 class="name">Koh Wyhow</h5>
-                                    <p class="position">Invoke <br> -Chief Analytics Officer <br> </p>
+                                    <p class="position">Former Invoke <br> -Chief Analytics Officer <br> </p>
                                 </div>
                             </div>
                         </div>
