--- a/ourTeam.html
+++ b/ourTeam.html
@@ -290,7 +290,7 @@
                         <img src="assets/img/team/hr_icon.png" alt="speaker name">
                         <div class="info_box">
                             <h5 class="name">Human Resources</h5>
-                            <p class="position">1 HOD</p>
+                            <p class="position">1 HOD + 1 Officer</p>
                         </div>
                     </div>
 
@@ -805,6 +805,22 @@
                             <div class="in-row-member member-col">
                                 <img class="btn-circle-member" src="assets/img/team/farhana_head.png" id="farhana" style="width: 40%; height:auto" data-toggle="modal" data-target="#memberModal" onClick="setModal(29)">
                                 <p>Farhana Rosol</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="section_title">
+                        <h3 class="title">
+                            Officer
+                        </h3>
+                    </div>
+
+
+                    <div class="row member-row" style="padding-bottom: 10px">
+                        <div class="col-sm" style="text-align: center">
+                            <div class="in-row-member member-col">
+                                <img class="btn-circle-member" src="assets/img/team/abdul_head.jpg" id="farhana" style="width: 40%; height:auto" data-toggle="modal" data-target="#memberModal" onClick="setModal(30)">
+                                <p>Abdul Moeed Rehman</p>
                             </div>
                         </div>
                     </div>
